# Nikmas_library

./: README.md  pyproject.toml
nikmas/utils/: __init__.py  get_custom_attribute_names.py
tests/: test_get_custom_attribute_names.py
