[tool.poetry]
name = "nikmas"
version = "0.1.0"
description = "Collection of useful utils for python projects."
authors = ["Nikita Maslov <maslov.n.e@gmail.com>"]
repository = "https://github.com/nikmas-dev/Nikmas_library"
readme = "README.md"
keywords = ["utils"]


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
